--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./src/index.js"></script>
+    <script type="module" src="./src/button.js"></script>
   </head>
 
   <body>
@@ -33,11 +34,12 @@
     <section hidden id="game-screen">
       <div id="game"></div>
       <button id="restart">restart</button>
+      <modal hidden id="modal">choose next line</modal>
     </section>
 
     <section hidden id="end-screen">
       <button id="menu">menu principal</button>
-      <button id="restart">restart</button>
+      <button id="restart2">restart</button>
     </section>
   </body>
 </html>
