third commit searching

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script type="module" src="./src/index.js"></script>
-    <script type="module" src="./src/button.js"></script>
   </head>
 
   <body>
@@ -32,9 +31,9 @@
     </section>
 
     <section hidden id="game-screen">
+      <modal hidden id="modal">choose next line</modal>
       <div id="game"></div>
       <button id="restart">restart</button>
-      <modal hidden id="modal">choose next line</modal>
     </section>
 
     <section hidden id="end-screen">
