--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     </section>
 
     <section hidden id="game-screen">
-      <audio src=""></audio>
+      <audio
+        id="music"
+        src="./sound/Them - Its All Over Now, Baby Blue (Lyrics).mp3"
+      ></audio>
       <dialog id="dialog">
         <p>got to next line</p>
       </dialog>
@@ -74,6 +77,8 @@
       <div hidden id="game"></div>
 
       <button hidden id="menu-from-game">menu</button>
+      <button id="play-music">play music</button>
+      <button id="stop-music">stop music</button>
     </section>
 
     <section hidden id="end-screen">
