--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <button hidden id="menu-from-game">menu</button>
       <button id="play-music">play music</button>
-      <button id="stop-music">stop music</button>
+      <button id="stop-music">pause music</button>
     </section>
 
     <section hidden id="end-screen">
