--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <div id="number-of-game"></div>
       <div id="landing-button">
-        <button id="rule-btn">rules</button>
-        <button id="start-init">start</button>
+        <button id="rule-btn">Rules</button>
+        <button id="start-init">Start</button>
       </div>
       <a id="link" href="https://wtfhappenedin1971.com/">Food For Thougts </a>
     </section>
@@ -47,14 +47,14 @@
           <li>Choose wisely but listen to your instinct</li>
         </ul>
       </div>
-      <button id="menu">menu principal</button>
+      <button id="menu">Menu</button>
     </section>
 
     <section hidden id="initialize-screen">
       <h1>Give us your name <br />Or your credit card number</h1>
       <div id="init-buttons">
-        <button id="menu-from-init">menu</button>
-        <button id="send-name">next</button>
+        <button id="menu-from-init">Menu</button>
+        <button id="send-name">Born</button>
       </div>
       <form>
         <input type="text" name="" id="name-register" /> <br />
@@ -73,25 +73,25 @@
       <dialog id="dialog-error">
         <p>too fast</p>
       </dialog>
-      <button hidden id="new-board">restart</button>
+      <button hidden id="new-board">Restart</button>
       <div hidden id="game"></div>
 
-      <button hidden id="menu-from-game">menu</button>
-      <button id="play-music">play music</button>
-      <button id="stop-music">pause music</button>
+      <button hidden id="menu-from-game">Menu</button>
+      <button id="play-music">Play Music</button>
+      <button id="stop-music">Pause Music</button>
     </section>
 
     <section hidden id="end-screen">
-      <button id="menu-from-end">menu principal</button>
+      <button id="menu-from-end">Menu</button>
       <div id="text-end">
         <p>
           You have just finish the game, Congratulations! <br />
           But it is LIFE so when you are finish your dead ! <br />
           Go back to menu for starting a new life, <br />
-          and maybe anjoy every moments even when the moon hit you hard!!
+          and maybe try to enjoy every moments even when the moon hit you hard!!
         </p>
       </div>
-      <button id="start-from-end">restart</button>
+      <button id="start-from-end">Restart</button>
     </section>
   </body>
 </html>
