--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
       </dialog>
       <button hidden id="new-board">Restart</button>
       <div hidden id="game"></div>
-
-      <button hidden id="menu-from-game">Menu</button>
-      <button id="play-music">Play Music</button>
-      <button id="stop-music">Pause Music</button>
+      <div>
+        <button hidden id="menu-from-game">Menu</button>
+        <br />
+        <button id="play-music">Play Music</button>
+        <br />
+        <button id="stop-music">Pause Music</button>
+      </div>
     </section>
 
     <section hidden id="end-screen">
