--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <form>
         <input type="text" name="" id="name-register" /> <br />
-        <label id="label" for="">Write your name and press next</label>
+        <label id="label" for="">Write your name and press Born</label>
       </form>
     </section>
 
