--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button id="send-name">Born</button>
       </div>
       <form>
-        <input type="text" name="" id="name-register" /> <br />
+        <input type="text" name="" id="name-register" />
         <label id="label" for="">Write your name and press Born</label>
       </form>
     </section>
