--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
     </section>
 
     <section hidden id="rule-screen">
-      <div id="rule-text">
-        <h1>History</h1>
-        <p>
-          This game was invented during a storm. Lost in the middle of nowhere
-          with a pc an old man discover that we can create a game with basic
-          javascript and html that will recreate the hazard of life. <br />
-          This game aims to show how life is about making decision without
-          always knowing what comes next.
-        </p>
+      <div id="rules">
         <h1>Rules</h1>
-        <ul>
-          <li>When you start you just born so you begin from the bottom</li>
-          <li>You can choose any spot on the next line</li>
-          <li>Always line by line</li>
-          <li>If you are hit by the moon you come down two lines</li>
-          <li>Choose wisely but listen to your instinct</li>
-        </ul>
+        When you start you just born so you begin from the bottom <br />
+        You can choose any spot on the next line <br />
+        Always line by line <br />
+        If you are hit by the moon you come down two lines <br />
+        Choose wisely but listen to your instinct.
       </div>
+      <div id="history">
+        <h1>History</h1>
+        This game was invented during a storm. Lost in the middle of nowhere
+        with a pc an old man discover that with basic javascript and html we can
+        generate a game that will recreate the hazard of life. <br />
+        This game aims to show how life is about making decision without always
+        knowing what comes next. Before being hit by a fatally thunder storm he
+        wrote down this code on the back of black ship horn.
+      </div>
+
       <button id="menu">Menu</button>
+      <a id="archive" href="https://archive.org/">Why internet is good ?</a>
     </section>
 
     <section hidden id="initialize-screen">
