--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </dialog>
       <button hidden id="new-board">Restart</button>
       <div hidden id="game"></div>
-      <div>
+      <div id="div">
         <button hidden id="menu-from-game">Menu</button>
         <br />
         <button id="play-music">Play Music</button>
