--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         src="./sound/Them - Its All Over Now, Baby Blue (Lyrics).mp3"
       ></audio>
       <dialog id="dialog">
-        <p>got to next line</p>
+        <p>Go to next line</p>
       </dialog>
       <dialog id="dialog-error">
-        <p>too fast</p>
+        <p>Wrong move my Dear</p>
       </dialog>
       <button hidden id="new-board">Restart</button>
       <div hidden id="game"></div>
