--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
       <div id="text-end">
         <p>
           You have just finish the game, Congratulations! <br />
-          But it is LIFE so when you are finish your dead ! <br />
+          But it is LIFE so when you have finished, your dead ! <br />
           Go back to menu for starting a new life, <br />
-          and maybe try to enjoy every moments even when the moon hit you hard!!
+          and maybe try to enjoy every moments even when the moon hits you
+          hard!!
         </p>
       </div>
       <button id="start-from-end">Restart</button>
